--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:claridocs}
-    username: ${DB_USER:postgres}
-    password: ${DB_PASSWORD:qazqazqaz3}
+    username: ${DB_USER:fathy}
+    password: ${DB_PASSWORD:2028}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
