--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:claridocs}
     username: ${DB_USER:postgres}
-    password: ${DB_PASSWORD:qazqazqaz3}
+    password: ${DB_PASSWORD:1234}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
