--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:claridocs}
-    username: ${DB_USER:postgres}
-    password: ${DB_PASSWORD:1234}
+    username: ${DB_USER:fathy}
+    password: ${DB_PASSWORD:2028}
     driver-class-name: org.postgresql.Driver
   mvc:
     view:
@@ -10,12 +10,23 @@ spring:
       suffix: .jsp
   jpa:
     hibernate:
-      ddl-auto: update   # for dev; switch to 'validate' in prod
+      ddl-auto: update # for dev; switch to 'validate' in prod
     open-in-view: false
     properties:
       hibernate:
         format_sql: true
         jdbc.lob.non_contextual_creation: true
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
+      file-size-threshold: 2KB
+
+app:
+  upload:
+    dir: uploads
+
 server:
   port: 8080
 logging:
